# rust-os

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config
boot/: Cargo.toml
boot/src/: lib.rs
boot/x86_64/: boot.asm  grub.cfg  linker.ld  multiboot.asm
kernel/: Cargo.toml
kernel/.cargo/: config
kernel/src/: buddy_alloc.rs  elf.rs  fat16.rs  frame_alloc.rs  gdt.rs  global_alloc.rs  interrupts.rs  lib.rs  mem.rs  port.rs  scheduler.rs  serial_port.rs  syscalls.rs  userspace.rs  vga_buffer.rs
runner/: Cargo.toml
runner/.cargo/: config
runner/src/: main.rs
src/: lib.rs  main.rs  vga_buffer.rs
userspace/: Cargo.toml
userspace/src/: boot.rs  lib.rs  main.rs
