[package]
name = "rust-os-boot"
version = "0.1.0"
authors = ["Nikos Filippakis <aesmade@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
spin = "0.5.2"
"rust-os" = { path = "../kernel" }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
