[package]
name = "rust-os"
version = "0.1.0"
authors = ["Nikos Filippakis <aesmade@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
spin = "0.5.2"
uart_16550 = "0.2.0"
x86_64 = "0.7.0"
pc-keyboard = "0.3.1"
multiboot2 = "0.1.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[features]
"no-panic-handler" = []
