[package]
name = "rust-os-runner"
version = "0.1.0"
authors = ["Nikos Filippakis <aesmade@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
"rust-os" = { path = "../kernel", features = ["no-panic-handler"] }
bootloader = { version = "0.8.0", features = ["map_physical_memory"] }
x86_64 = "0.7.5"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33         # (0x10 << 1) | 1

[package.metadata.bootloader]
physical-memory-offset = "0xC0000000"
